# actix_web_test

./: Cargo.toml  LICENSE  README.md
entity/: Cargo.toml
entity/src/: mod.rs  prelude.rs  user.rs
migration/src/: lib.rs  m20241026_050113_user.rs
src/: main.rs
src/routes/: home_routes.rs
src/routes/handlers/: home_handlers.rs  mod.rs
src/utils/: api_response.rs  app_state.rs  constants.rs  mod.rs
