[package]
name = "actix_web_test_project"
version = "0.1.0"
edition = "2021"

[workspace]
members= [".","entity","migration"]


[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
actix-web = "4.9.0"
serde = "1.0.210"
serde_json = "1.0.132"
dotenv = "0.15.0"
env_logger = "0.11.5"
lazy_static = "1.5.0"
sea-orm = { version = "1.0.0-rc.5", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ,"debug-print","with-json"] }